--- a/efCore/Views/Shared/_Layout.cshtml
+++ b/efCore/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ogrenci" asp-action="Index">Ogrenciler</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kurs" asp-action="Index">Kurslar</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="KursKayit" asp-action="Index">Kurs Kayıt</a>
+                        </li>
                     </ul>
                 </div>
             </div>
