--- a/efCore/Views/KursKayit/create.cshtml
+++ b/efCore/Views/KursKayit/create.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div class="mb-3">
         <label asp-for="KursId" class="form-label">Kurs</label>
-        <select asp-for="OgrenciId" asp-items="ViewBag.Kurslar" class="form-control">
+        <select asp-for="KursId" asp-items="ViewBag.Kurslar" class="form-control">
             <option value="">Seçiniz</option>
         </select>
     </div>
