--- a/efCore/Views/Shared/_Layout.cshtml
+++ b/efCore/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="KursKayit" asp-action="Index">Kurs Kayıt</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ogretmen" asp-action="Index">Eğitmenler</a>
+                        </li>
                     </ul>
                 </div>
             </div>
