--- a/efCore/Views/Kurs/Edit.cshtml
+++ b/efCore/Views/Kurs/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Kurs
+@model KursViewModel
 
 <h2>Kurs Güncelleme</h2>
 <hr>
@@ -9,6 +9,12 @@
             <div class="mb-3">
                 <label asp-for="Baslik" class="form-label">Kurs Başlığı</label>
                 <input asp-for="Baslik" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label asp-for="OgretmenId" class="form-label">Öğretmen</label>
+                <select asp-for="OgretmenId" asp-items="ViewBag.Ogretmenler" class="form-select">
+                 <option value="">Seçiniz</option>
+                </select>
             </div>
             <button type="submit" class="btn btn-primary">Kaydet</button>
         </form>
