--- a/efCore/Views/Kurs/create.cshtml
+++ b/efCore/Views/Kurs/create.cshtml
@@ -7,6 +7,12 @@
         <label asp-for="Baslik" class="form-label">Kurs Başlığı</label>
         <input asp-for="Baslik" class="form-control">
     </div>
+    <div class="mb-3">
+        <label asp-for="OgretmenId" class="form-label">Öğretmen</label>
+        <select asp-for="OgretmenId" asp-items="ViewBag.Ogretmenler" class="form-select">
+            <option value="">Seçiniz</option>
+        </select>
+    </div>
     <button type="submit" class="btn btn-primary">Kaydet</button>
     
 </form>
