--- a/efCore/Views/Kurs/index.cshtml
+++ b/efCore/Views/Kurs/index.cshtml
@@ -9,6 +9,7 @@
             <tr>
                 <th>@Html.DisplayNameFor(m => m.KursId)</th>
                 <th>@Html.DisplayNameFor(m => m.Baslik)</th>
+                <th>@Html.DisplayNameFor(m => m.Ogretmen.AdSoyad)</th>
                 <th style="width: 150px;">Ayarlar</th>
             </tr>
         </thead>
@@ -17,6 +18,7 @@
                 <tr>
                     <td>@Html.DisplayFor(modelitem => item.KursId)</td>
                     <td>@Html.DisplayFor(modelitem => item.Baslik)</td>
+                    <td>@Html.DisplayFor(modelitem => item.Ogretmen.AdSoyad)</td>
                     <td>
                         <a asp-controller="Kurs" asp-action="Edit" asp-route-id="@item.KursId" class="btn btn-sm btn-primary">Edit</a>
                         <a asp-controller="Kurs" asp-action="Delete" asp-route-id="@item.KursId" class="btn btn-sm btn-danger">Delete</a>
