--- a/BlogApp/Views/Posts/index.cshtml
+++ b/BlogApp/Views/Posts/index.cshtml
@@ -10,9 +10,8 @@
                                 <img src="~/img/@post.Image" class="img-fluid rounded" alt="">
                             </div>
                             <div class="col-8">
-                                <h5><a href="/posts/@post.Url" class="btn-libk fw-bold">@post.Title</a></h5>
-                                <p>@post.Content</p>
-                                <a href="#" class="badge bg-danger bg-opacity-10 text-danger mb-2 fw-bold">Web Geliştirme</a>
+                                <h5><a href="/posts/details/@post.Url" class="btn-libk fw-bold">@post.Title</a></h5>
+                                <p>@post.Description</p>                
                             </div>
                         </div>
                     </div>
