--- a/BlogApp/Views/Shared/Components/TagsMenu/Default.cshtml
+++ b/BlogApp/Views/Shared/Components/TagsMenu/Default.cshtml
@@ -7,7 +7,7 @@
                     <ul class="list-inline d-flex flex-wrap gap-2">
                         @foreach(var tag in Model){
                             <li class="lis-inline-item">
-                                <a class="btn btn-outline-secondary btn-sm">@tag.Text</a>
+                                <a href="/posts/tag/@tag.Text" class="btn btn-outline-secondary btn-sm">@tag.Text</a>
                             </li>
                         }
                     </ul>
