--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -14,10 +14,32 @@
             <a href="/" class="navbar-brand">
                 <i class="bi bi-body-text"></i>BlogApp
             </a>
+
+            <ul class="navbar-nav ms-auto">
+                @if(User.Identity!.IsAuthenticated){
+                <li class="nav-item">
+                    <a href="/posts/list" class="nav-link">Post</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">@User.Identity.Name</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/users/logout" class="nav-link">Logout</a>
+                </li>
+                }else{     
+                <li class="nav-item">
+                    <a href="/users/login" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/users/register" class="nav-link">Register</a>
+                </li>
+                }
+            </ul>
         </div>
     </nav>
     <div class="container mt-3">
         @RenderBody()
     </div>
+    @RenderSection("Scripts", required:false)
 </body>
 </html>
