--- a/BlogApp/Views/Posts/details.cshtml
+++ b/BlogApp/Views/Posts/details.cshtml
@@ -11,7 +11,12 @@
                 } 
             </div>
             <img src="~/img/@Model.Image" class="img-fluid rounded" alt="">
-            <div>@Html.Raw(@Model.Content)</div>            
+            <ul class="list-inline my-3">
+                <li class="list-inlile-item"><i class="bi bi-calendar">@Model.PublishedOn.ToString("d")</i></li>
+                <li class="list-inline-item"><i class="bi bi-person-circle"></i><a href="/profile/@Model.User.UserName">@Model.User.Name</a></li>
+            </ul>
+            <hr class="py-3">
+          <div>@Html.Raw(@Model.Content)</div>            
         </div>
         <div class="bg-white mt-3">
             <div class="card border-0">
@@ -26,7 +31,9 @@
                                 <img src="/img/@comment.User.Image" alt="" class="avatar rounded-circle float-start me-3">
                                 <div>
                                     <div class="mb-2 d-flex">
-                                        <h6 class="me-2">@comment.User.UserName</h6>
+                                        <h6 class="me-2">
+                                        <a href="/profile/@comment.User.UserName">@comment.User.Name</a>
+                                        </h6>
                                         <small>@comment.PublishedOn.ToString("G")</small>
                                     </div>
                                     <p>@comment.Text</p>
