--- a/IdentityApp/Views/Users/Edit.cshtml
+++ b/IdentityApp/Views/Users/Edit.cshtml
@@ -4,12 +4,12 @@
 <hr>
 <form asp-action="Edit" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
-    <input type="hidden" name="Id" value="@Model.Id">
+    <input name="Id" type="hidden" value="@Model.Id">
     <div class="mb-3">
         <label asp-for="FullName"></label>
         <input asp-for="FullName" class="form-control">
     </div>
-    <div class="mb-3">
+     <div class="mb-3">
         <label asp-for="Email"></label>
         <input asp-for="Email" class="form-control">
     </div>
@@ -17,30 +17,41 @@
         <div class="card-header">
             Parola Güncelle
         </div>
-    <div class="card-body">
-     <div class="mb-3">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control">
+        <div class="card-body">
+            <div class="mb-3">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" class="form-control">
+            </div>
+        </div>
     </div>
-    <div class="mb-3">
-        <label asp-for="ConfirmPassword"></label>
-        <input asp-for="ConfirmPassword" class="form-control">
-    </div>
-    </div>
-    </div>
-    <div class="card mt-3">
+
+    <div class="card">
         <div class="card-header">
             Roller
         </div>
         <div class="card-body">
-            @foreach(var role in ViewBag.Roles){
+            @if(ViewBag.Roles != null){
+            @foreach(var role in ViewBag.Roles)
+            {
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" name="" id="@role">
+                    <input type="checkbox" 
+                    class="form-check-input" 
+                    name="SelectedRoles"
+                    value="@role" 
+                    id="@role"
+                    @if(Model.SelectedRoles != null){
+                    @(Model.SelectedRoles.Any(i => i == role) ? "checked": "")
+                    }  
+                    >
                     <label for="@role" class="form-check-label">@role</label>
                 </div>
+            }
             }
         </div>
     </div>
     <button type="submit" class="btn btn-primary">Kaydet</button>
-
 </form>
