--- a/IdentityApp/Views/Users/Index.cshtml
+++ b/IdentityApp/Views/Users/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<AppUser>
 
-<a asp-action="Create" class="btn btn-primary">Create User</a>
+<a class="btn btn-primary" asp-action="Create">Create User</a>
 <hr>
 <table class="table table-sm table-bordered">
     <thead>
@@ -8,22 +8,24 @@
             <th>Id</th>
             <th>Name</th>
             <th>Email</th>
-            <th style="width: 125px;">Settings</th>
+            <th style="width: 125px;"></th>
         </tr>
     </thead>
     <tbody>
-            @if(Model.Count() == 0){
-                 <tr><td colspan="4" class="text-center">Role Yok</td></tr>
-            }
-        @foreach(var user in Model){
+        @if(Model.Count() == 0)
+        {
+            <tr><td colspan="4" class="text-center">User Yok</td></tr>
+        }
+        @foreach(var user in Model)
+        {
             <tr>
                 <td>@user.Id</td>
                 <td>@user.FullName</td>
                 <td>@user.Email</td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-primary btn-sm">Edit</a>
-                    <form asp-action="Delete" method="post" onsubmit="return confirm('Emin Misiniz?')" style="display: inline-block;">
-                        <input type="hidden" name="id" value="@user.Id">
+                    <form asp-action="Delete" method="post" onsubmit="return confirm('emin misiniz')" style="display: inline-block;">
+                        <input type="hidden" value="@user.Id" name="id">
                         <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                     </form>
                 </td>
