--- a/IdentityApp/Views/_ViewImports.cshtml
+++ b/IdentityApp/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using IdentityApp.Models
 @using Microsoft.AspNetCore.Identity
 @using IdentityApp.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper IdentityApp.TagHelpers*, IdentityApp
